2007-07-06  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c: Better docstring for PPD.markOption.

2007-06-08  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Ship examples directory correctly.

2007-06-08  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.24.

2007-06-08  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_adminSetServerSettings): In Python
	2.5, PyDict_Next() uses a ssize_t-like type for the position, not
	int (bug #239805).

	* cupsconnection.c (Connection_getClasses): Fixed typo in
	debugging output.

2007-06-07  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.23.

2007-06-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_adminSetServerSettings): Debug
	output.

	* cupsppd.c (cautious_PyUnicode_DecodeUTF8): New function to
	safe-guard against supposed UTF-8 strings that are incorrect (bug
	#242962).

2007-05-18  Tim Waugh  <twaugh@redhat.com>

	* examples/cupstree.py: New file.

2007-05-17  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (cups_require): New method.

	* Makefile: Build with VERSION set.

2007-05-17  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.22.

2007-05-16  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPDs): Allow threads during
	cupsDoRequest.
	(Connection_getDevices): Likewise.

2007-05-04  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): New optional
	parameters in order to perform maintenance functions.

2007-04-16  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.21.

2007-04-11  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getSubscriptions): New method.
	(Connection_createSubscription): New method.
	(Connection_getNotifications): New method.
	(Connection_renewSubscription): New method.
	(Connection_cancelSubscription): New method.

2007-04-10  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): CUPS_PRINTER_COMMANDS.

2007-04-04  Tim Waugh  <twaugh@redhat.com>
