@@ -528,6 +528,9 @@ initcups (void)
   STR_CONSTANT (CUPS_SERVER_REMOTE_PRINTERS);
   STR_CONSTANT (CUPS_SERVER_SHARE_PRINTERS);
   STR_CONSTANT (CUPS_SERVER_USER_CANCEL_ANY);
+#ifdef HAVE_CUPS_1_3
+  STR_CONSTANT (CUPS_SERVER_REMOTE_ANY);
+#endif /* CUPS 1.3 */
 
   // Exceptions
   HTTPError = PyErr_NewException ("cups.HTTPError", NULL, NULL);
